# pyterrier_sentence_transformers

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.py
examples/: contriever_scifact.py  search_over_jsons.py
scripts/: contriever_scifact.py  example_retrieve.py  search_over_jsons.py
scripts/scripts/: as_install_faiss.sh
src/pyterrier_sentence_transformers/: __init__.py  base.py  index.py  indexer.py  retriever.py
tests/: test_indexing.py
